Update Prognosticating Client Turnover.ipynb

--- a/Prognosticating Client Turnover.ipynb
+++ b/Prognosticating Client Turnover.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "### Overview:\n",
     "\n",
-    "<p style='text-align: justify;'>The The telecom sector has a significant challenge with client turnover, where customers frequently switch between service providers. With an annual turnover rate averaging between 25%, telecom companies encounter substantial financial implications due to the high cost of acquiring new customers compared to retaining existing ones. Retaining profitable customers has emerged as a top priority for incumbent operators. To address this issue, predictive analytics plays a crucial role in identifying customers at high risk of turnover. This project aims to utilize machine learning techniques to analyze customer-level data from a leading telecom firm and develop models capable of predicting churn based on usage features. The goal is to predict which customers might leave based on how they use the service.</p>"
+    "<p style='text-align: justify;'>The The telecom sector has a significant challenge with client turnover, where customers frequently switch between service providers. With an annual turnover rate averaging between 10-25%, telecom companies encounter substantial financial implications due to the high cost of acquiring new customers compared to retaining existing ones. Retaining profitable customers has emerged as a top priority for incumbent operators. To address this issue, predictive analytics plays a crucial role in identifying customers at high risk of turnover. This project aims to utilize machine learning techniques to analyze customer-level data from a leading telecom firm and develop models capable of predicting churn based on usage features. The goal is to predict which customers might leave based on how they use the service.</p>"
    ]
   },
   {
